AZUREUS CHANGELOG
-----------------

2006.xx.xx | Azureus 2.4.0.1

FEATURE: UI   | Allow some selection of split data/protocol stats in some views [Parg]
FEATURE: Core | Make default recheck behaviour after crash only check pieces active at last save point plus config to revert to old behaviour of checking everything [Parg]

CHANGE: UI    | Add NAT Test item to OSX "Azureus" menu [Nolar]
CHANGE: UI    | Filter-as-you-type is now more visible [TuxPaper]
CHANGE: UI    | "Show In Explorer" on a Folder now opens to show what's in the folder [TuxPaper]
CHANGE: Plug  | Added vendor id to DHT packets and increased version appropriately [Parg]
CHANGE: Core  | Remove option to truncate files when setting to do-not-download as too many users confused by this [Parg]
CHANGE: Core  | Pick up alerts raised during closedown and give user chance to see them [Parg]
CHANGE: Plug  | Warn if UPnP port removal is slow as this can hang AZ closedown [Parg]

BUGFIX: Core  | Ensure SO_REUSEADDR is set when binding during NAT test [Nolar]
BUGFIX: Core  | Retain data from terribly slow senders [MjrTom]
BUGFIX: Core  | Fixed a bug with potentially becoming uninterested in peers incorrectly [MjrTom]
BUGFIX: Plug  | Column dispose listener wasn't being called when there was no cell dispose listener [TuxPaper]
BUGFIX: UI    | Fixed window size/position not always being saved [TuxPaper]
BUGFIX: UI    | Fix default language: Use same language from diff. country when user's lang/country doesn't exist [TuxPaper]
BUGFIX: UI    | Fixed new table rows getting last graphic cell's image [TuxPaper]
BUGFIX: UI    | Column sort is now case-insensitive (again) for text columns [TuxPaper]
BUGFIX: UI    | Fix number display Seeds2Peer column (when radio is really small) [TuxPaper]
BUGFIX: UI    | Fixed Drag and Drop.  Should work in Windows and Linux. [TuxPaper]
BUGFIX: Core  | Prevent infinite recursion and breakage of some file systems when moving torrent's data into a folder inside itself [Parg]