@@ -61,8 +61,7 @@ public class BTMessageDecoder implements MessageStreamDecoder {
   
   private ArrayList messages_last_read = new ArrayList();
   private int protocol_bytes_last_read = 0;
-  private int data_bytes_last_read = 0;
-  private int data_bytes_owed = 0;  
+  private int data_bytes_last_read = 0; 
   private int percent_complete = -1;
   
   
@@ -142,12 +141,10 @@ public class BTMessageDecoder implements MessageStreamDecoder {
     
   
 
-  public int getProtocolBytesDecoded() {  return protocol_bytes_last_read;  }
-    
-  
-  
+  public int getProtocolBytesDecoded() {  return protocol_bytes_last_read;  }  
   public int getDataBytesDecoded() {  return data_bytes_last_read;  }
     
+  
   
   public ByteBuffer destroy() {
     is_paused = true;
@@ -248,7 +245,8 @@ public class BTMessageDecoder implements MessageStreamDecoder {
 
   
   private int postReadProcess() throws IOException {
-    int bytes_read = 0;
+    int prot_bytes_read = 0;
+    int data_bytes_read = 0;
     
     if( !reading_length_mode && !destroyed ) {  //reading payload data mode
       //ensure-restore proper buffer limits
@@ -257,7 +255,14 @@ public class BTMessageDecoder implements MessageStreamDecoder {
       
       int read = payload_buffer.position( SS ) - pre_read_start_position;
       
-      bytes_read += read;
+      if( payload_buffer.position( SS ) > 0 ) {  //need to have read the message id first byte
+      	if( BTMessageFactory.getMessageType( payload_buffer) == Message.TYPE_DATA_PAYLOAD ) {
+      		data_bytes_read += read;
+      	}
+      	else {
+      		prot_bytes_read += read;
+      	}
+      }
 
       if( !payload_buffer.hasRemaining( SS ) && !is_paused ) {  //full message received!        
         payload_buffer.position( SS, 0 );
@@ -292,11 +297,6 @@ public class BTMessageDecoder implements MessageStreamDecoder {
           try {
             Message msg = BTMessageFactory.createBTMessage( ref_buff );
             messages_last_read.add( msg );
-            
-            //we only learn what type of message it is AFTER we are done decoding it, so we probably need to work off the count post-hoc
-            if( msg.getType() == Message.TYPE_DATA_PAYLOAD ) {
-              data_bytes_owed += message_length;
-            }
           }
           catch( MessageException me ) {
             ref_buff.returnToPool();
@@ -316,8 +316,7 @@ public class BTMessageDecoder implements MessageStreamDecoder {
     if( reading_length_mode && !destroyed ) {
       length_buffer.limit( SS, 4 );  //ensure proper buffer limit
       
-      int read = (pre_read_start_buffer == 1) ? length_buffer.position( SS ) - pre_read_start_position : length_buffer.position( SS );
-      bytes_read += read;
+      prot_bytes_read += (pre_read_start_buffer == 1) ? length_buffer.position( SS ) - pre_read_start_position : length_buffer.position( SS );
       
       if( !length_buffer.hasRemaining( SS ) ) {  //done reading the length
         reading_length_mode = false;
@@ -353,18 +352,10 @@ public class BTMessageDecoder implements MessageStreamDecoder {
       }
     }
     
-    if( bytes_read < data_bytes_owed ) {
-      data_bytes_last_read += bytes_read;
-      data_bytes_owed -= bytes_read;
-    }
-    else {  //bytes_read >= data_bytes_owed
-      data_bytes_last_read += data_bytes_owed;
-      data_bytes_owed = 0;
-      
-      protocol_bytes_last_read += bytes_read - data_bytes_owed;
-    }
+    protocol_bytes_last_read += prot_bytes_read;
+    data_bytes_last_read += data_bytes_read;
     
-    return bytes_read;
+    return prot_bytes_read + data_bytes_read;
   }
   
   
